plugins {
    id "com.github.johnrengelman.shadow" version "8.1.1" apply false
}

group 'net.gigaclub'
version '1.0-SNAPSHOT'

subprojects {
    apply plugin: 'java'

    group = project.group
    version = project.version

    java {
        toolchain.languageVersion.set(JavaLanguageVersion.of(17))
    }

    repositories {
        mavenCentral()
        maven {
            url 'https://jitpack.io/'
        }
        maven {
            url 'https://repo.papermc.io/repository/maven-public/'
        }
        maven {
            url 'https://oss.sonatype.org/content/groups/public/'
        }
        maven {
            url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
        }
        maven {
            url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
        }
    }
}